--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidlabs">
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,30 +15,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProfileActivity"
-            android:parentActivityName=".MainActivity2">
 
+        <activity
+            android:name=".ProfileActivity" >
+             </activity>
+        <activity
+            android:name=".ChatRoomActivity" >
         </activity>
-        <activity android:name=".Main3Activity">
-            <intent-filter>
-                <action android:name="android.intent.action.Mail" />
 
-                <category android:name="android.intent.category.Launcher" />
-            </intent-filter>
-        </activity>
         <activity android:name=".MainActivity2">
-            <intent-filter>
-                <action android:name="android.intent.action.Mail" />
-
-                <category android:name="android.intent.category.Launcher" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
