--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:name="android.hardware.camera"
         android:required="true" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
 
 
     <application
@@ -15,15 +16,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity
-            android:name=".ProfileActivity" >
-             </activity>
-        <activity
-            android:name=".ChatRoomActivity" >
-        </activity>
-        <activity android:name=".MyDBHandler"></activity>
-
+        <activity android:name=".CurrencyConverter"></activity>
+        <activity android:name=".WeatherForecast" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".ChatRoomActivity" />
+        <activity android:name=".MyDBHandler" />
         <activity android:name=".MainActivity2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,9 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
