--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CurrencyConverter"></activity>
+        <activity android:name=".TestToolbar"></activity>
+        <activity android:name=".CurrencyConverter" />
         <activity android:name=".WeatherForecast" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".ChatRoomActivity" />
